--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,18 @@
 Changelog:
 
+V. 1.29
+
+* changed minority caucasian to gray
+* added proportionality score
+* added packing/cracking asymmetry score
+* added export of seats/votes
+* added projected partisan representation map coloring mode
+* added vtd-level packing maps
+* added display of feature detail when clicking on a feature
+* added instruction to change quota method ("set quota hare")
+* added instruction to change to prefering 4-4 seats to 5-3 seats (SET PREFER4S TRUE)
+
+
 V. 1.28
 
 * added pie chart generation and export ("EXPORT PIE")
